--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,40 @@
   color: #09d3ac;
 }
 
-.imageLayout{
-  -webkit-column-count: 3; 
-    -moz-column-count: 3;
+.imageLayout {
+  -webkit-column-count: 5;
+    -moz-column-count: 5;
     column-count: 5;
-    -webkit-column-width: 33%;
-    -moz-column-width: 33%;
-    column-width: 33%;
+    -webkit-column-width: 20%;
+    -moz-column-width: 20%;
+    column-width: 20%;
+}
+
+/* .image{
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+} */
+
+@media (max-width: 450px) {
+  .imageLayout {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    -webkit-column-width: 100%;
+    -moz-column-width: 100%;
+    column-width: 100%;
+  }
+}
+
+@media (max-width: 786px) {
+  .imageLayout {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-width: 50%;
+    -moz-column-width: 50%;
+    column-width: 50%;
+  }
 }
